# discord-chess

./: .gitignore  Cargo.toml  README.md  run
src/: config.rs  game.rs  main.rs
